Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Thu Nov 07 2007 - 0.6.4
- Changed permissions of auth.conf
- Fixes for working with rhn_yum_plugin
- still allow repo configuration for distro repos that have just 1 repo (like C5.1)
- fix baseurls used in repo setup

* Wed Nov 07 2007 - 0.6.3
- Be able to define and use Multiple NICs per system
- Add --virt-cpus to profile editing
- Fix bug where WUI (XMLRPC) auth wasn't supported on EL4
- Add --virt-bridge to profile editing and NICs
- Added serializer_shelve (as option) for added performance/persistance over YAML, experimental in /etc/cobbler/modules.conf, see Wiki
- Backup state files and migrate state structures upon RPM upgrade
- Added some more redundant files (for unsupported distros) to the rsync.exclude file
- added pre-sync and post-sync triggers, service restarts are now handled by /var/lib/cobbler/triggers
- webui now uses htaccess (see manpage and Wiki for setup instructions)
- added pagination to the WUI to keep pages from growing overly long
- added --server-override parameter for help with multi-subnet configurations (also see Wiki)
- removed yum-utils as a hard requirement, cobbler check now looks for yum-utils
- fixed bug where cobbler would try to copy hardlinks to themselves during sync
- misc random bugfixing

* Fri Sep 28 2007 - 0.6.2
- cobbler repo auto-add to discover yum repos automatically
- fix bug that allows empty mac addresses (None) in dhcpd.conf
- kickstarts automatically save kickstart file used to /root/cobbler.ks
- allow multiple (comma-seperated) values for --virt-size
- removed deprecated 'enchant' function (use SSH and koan instead)
- cleanup of a few unused settings
- allow for serialization modules to be selected in /etc/cobbler/modules.conf
- patch to allow for reposync of specific repos, even if not set to update
- added --dhcp-tag section for better DHCP customization (esp with multiple subnets)