@@ -75,11 +75,10 @@ class Repo(item.Item):
 	"""
         if type(keep_updated) == bool:
             self.keep_updated = keep_updated
-            return True
-        if not str(keep_updated).lower() in ["yes","y","yup","yeah","1","true"]:  
-            self.keep_updated = False
-        else:
+        elif str(keep_updated).lower() in ["yes","y","on","1","true"]:  
             self.keep_updated = True
+        else:
+            self.keep_updated = False
         return True
 
     def set_rpm_list(self,rpms):
