@@ -5,7 +5,9 @@ Cobbler CHANGELOG
 - Changed permissions of auth.conf
 - Fixes for working with rhn_yum_plugin
 - still allow repo configuration for distro repos that have just 1 repo (like C5.1)
-- fix baseurls used in repo setup
+- disable CGI weblogging by default (backend logging TBA)
+- fix WebUI handling of keep_updated (repo field) and netboot_enabled (system field)
+- disable the blender_cache as it's running afoul of the sync code
 
 * Wed Nov 07 2007 - 0.6.3
 - Be able to define and use Multiple NICs per system
